1.5/manifest/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend-frontend
  template:
    metadata:
      labels:
        app: backend-frontend
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.2
          ports:
          - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-frontend
  template:
    metadata:
      labels:
        app: backend-frontend
    spec:
      containers:
        - name: multitool
          image: wbitt/network-multitool
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  selector:
    app: backend-frontend
  ports:
  - name: listener-frontend
    port: 80
    targetPort: 80
    nodePort: 30001
  - name: listener-backend
    port: 8080
    targetPort: 8080
    nodePort: 30002
  type: NodePort
