1.5/manifest/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-svc
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-svc
            port: 
              number: 80
      
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-svc
            port: 
              number: 8080
